8279822: CI: Constant pool entries in error state are not supported

Reviewed-by: goetz
Backport-of: c5c8c0644d9442846de15422285fffeb91c3e0a1